# KingsEssayProjects

./: .gitmodules  README.MD  README.md
KE_C/: .gitignore  Makefile
KE_C/Mandlebrot/: Mandlebrot.c
KE_C/Minigrep/: ExpandableBitVec.c  ExpandableBitVec.h  Finder.c  Finder.h  Minigrep.c
KE_CPP/: KE_CPP.sln  README.md
KE_CPP/Mandlebrot/: Mandlebrot.cpp  Mandlebrot.vcxproj
KE_CPP/Minigrep/: ExpandableBitVec.cpp  ExpandableBitVec.h  Minigrep.cpp  Minigrep.vcxproj  Minigrep.vcxproj.filters
KE_CSharp/: .gitignore  KE_CSharp.sln  README.MD
KE_CSharp/Mandlebrot/: Program.cs
KE_CSharp/Minigrep/: ExpandableBitVec.cs  Program.cs
KE_CSharp/NumbersGuessingGame/: Class1.cs  Form1.Designer.cs  Form1.cs  Program.cs
KE_Go/: .gitignore
KE_Go/Mandlebrot/: go.mod  main.go
KE_Go/Minigrep/: bitvec.go  go.mod  main.go
KE_Java/Mandlebrot/: .gitignore  pom.xml
KE_Java/Minigrep/: build.gradle  settings.gradle
KE_Python/: .gitignore
KE_Python/.fleet/: run.json
KE_Python/GuessingGame/: app.py  guessing_game.py
KE_Python/Mandlebrot/: mandlebrot.py
KE_Python/Minigrep/: expandable_bit_vec.py  minigrep.py
KE_Rust/: .gitignore  Cargo.toml  README.md  index.html  mandlebrot.exe_1000.csv
KE_Rust/crates/guessing_game/: Cargo.toml
KE_Rust/crates/mandlebrot/src/: main.rs
KE_Rust/crates/minigrep/: Cargo.toml  pg_drmh.txt
KE_Rust/crates/minigrep/src/: args.rs  bitvec.rs  main.rs
KE_Rust/mingrep/: bitvec.rs  main.rs
KE_Rust/src/: main.rs
KE_Zig/: .gitignore  README.MD  build.zig
KE_Zig/src/: expandablebitvec.zig  mandlebrot.zig  minigrep.zig
(+6 files in other folders)
