[package]
name = "KE_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minigrep"
path = "mingrep/main.rs"

[[bin]]
name = "mandlebrot"
path = "mandlebrot/main.rs"

[profile.release]
lto = true

# Numbers is in src

[dependencies]
color-eyre = "0.6.2"
console_error_panic_hook = "0.1.7"
eframe = "0.21.2"
egui = "0.21.0"
getrandom = { version = "0.2.8", features = ["js"] } # for rand support with wasm
owo-colors = "3.5.0"
rand = "0.8.5"
regex = "1.7.1"
wasm-bindgen-futures = "0.4.34"
