[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = "0.21.2"
egui = "0.22.0"
getrandom = { version = "0.2.8", features = ["js"] } # for rand support with wasm
rand = "0.8.5"
wasm-bindgen-futures = "0.4.34"